--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="section-2">
             <h2>Works</h2>
                 <div class="container">
+                    <a  href="media/gallery/0fc35a55.jpg">
+                      <img class="item" src="media/gallery/thumbnail/965183f9.jpg">
+                    </a>
                     <a  href="media/gallery/f3aa6c9d.jpg">
                       <img class="item" src="media/gallery/thumbnail/b672aa17.jpg">
                     </a>
