--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="section-2">
             <h2>Works:</h2>
                 <div class="container">
+                    <a  href="media/gallery/6ad61a40.jpg">
+                      <img class="item" src="media/gallery/thumbnail/9e5518b4.jpg">
+                    </a>
                     <a  href="media/gallery/21de0d4e.jpg">
                       <img class="item" src="media/gallery/thumbnail/c4cca80b.jpg">
                     </a>
