--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="section-2">
             <h2>Works:</h2>
                 <div class="container">
-                    <a  href="media/gallery/39113953.jpg">
+                    <a  href="media/gallery/39113953.png">
                       <img class="item" src="media/gallery/thumbnail/39c24d80.jpg">
                     </a>
                     <a  href="media/gallery/6ad61a40.jpg">
